# novars

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL  NovaRS.config  OemHeader.cpp  OemHeader.h  OemLog.cpp  OemLog.h  OemRange.cpp  OemRange.h  OemRangecmp.cpp  OemRangecmp.h  README.md  StringUtils.h  TODO  cmake_uninstall.cmake.in  config.h.in  daemonize.h  date.cpp  date.h  main.cpp  ncrc32.cpp  ncrc32.h  oem.h  typedefs.h
debian/: README  README.Debian  changelog  conffile  control  copyright  docs  manpage.1  novars.config  novars.init  novars.postinst  novars.templates  postrm  preinst  rules
scripts/: novars-config  rc.novars.new
